--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": "^5.6 || ^7.0",
         "beberlei/assert": "^2.1 || ^3.0",
         "bernard/normalt": "^1.0",
-        "symfony/event-dispatcher": "^3.0 || ^4.0"
+        "symfony/event-dispatcher": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev" : {
         "aws/aws-sdk-php": "^3.0",
@@ -26,7 +26,7 @@
         "psr/log": "^1.0",
         "queue-interop/amqp-interop": "^0.6",
         "queue-interop/queue-interop": "^0.6",
-        "symfony/console": "^3.0 || ^4.0"
+        "symfony/console": "^3.0 || ^4.0 || ^5.0"
     },
     "suggest": {
         "php-amqplib/php-amqplib": "Allow sending messages to an AMQP server using php-amqplib",
