--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "beberlei/assert": "^2.1 || ^3.0",
-        "bernard/normalt": "^1.0",
+        "bernard/normalt": "dev-up-symfony",
         "symfony/event-dispatcher": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev" : {
@@ -69,5 +69,10 @@
         }
     },
     "prefer-stable": true,
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "repositories": [{
+            "type": "vcs",
+            "url": "git@github.com:legacy-room/normalt.git"
+        }
+    ]
 }
